--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
 	============================================= -->
     <script type="text/javascript" src="js/functions.js"></script>
 
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyCmivtC_tSletvuNhL5GFclOB00P1pOzSk"></script>
     <script type="text/javascript" src="js/jquery.gmap.js"></script>
 
     <script type="text/javascript">
