fixed menu name

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                 <div class="container clearfix">
 
-                    <div class="menu-title">Explore <span>CANVAS</span></div>
+                    <div class="menu-title"><span>Menu</span></div>
 
                     <nav class="one-page-menu no-offset">
                         <ul>
