--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="author" content="SemiColonWeb" />
+    <meta name="description" content="String Labs is a crypto studio, incubator and investor based in Palo Alto">
+    <meta name="keywords" content="Ethereum,Dfinity,PHI,decentralization,cryptography,distributed computing,DApps,incubator,investor,lab">
+    <meta name="author" content="String Labs" />
 
     <!-- Stylesheets
 	============================================= -->
