--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 						<div class="heading-block center">
 							<h2>Our Work</h2>
-							<span>Just in case you are wondering</span>
+							<span>Just in case you are wondering.</span>
 						</div>
 
 						<div class="col_one_third nobottommargin">
@@ -163,7 +163,7 @@
 						<div class="col_one_third nobottommargin col_last">
 							<div class="feature-box media-box">
 								<div class="fbox-media">
-									<img src="images/string/other-logo.png" alt="Other">
+									<img src="images/string/other-logo.png" alt="Other" style="opacity:0.7">
 								</div>
 								<div class="fbox-desc center">
 									<h3>Other<span class="subtitle">Joint ventures, fintech, mining...</span></h3>
@@ -464,7 +464,7 @@
 
 						<div class="heading-block">
 							<h2>Our Investors</h2>
-							<span>Visionary backers of the Next Internet</span>
+							<span>Visionary backers of the Next Internet.</span>
 						</div>
 
 						<div class="clear"></div>
