--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 						<div class="col_one_third nobottommargin">
 							<div class="feature-box media-box">
 								<div class="fbox-media">
-									<img src="/images/string/dfinity-logo.png" alt="DFINITY">
+									<img src="{{base}}/images/string/dfinity-logo.png" alt="DFINITY">
 								</div>
 								<div class="fbox-desc center">
 									<h3>DFINITY<span class="subtitle">Infinite Trust Machine</span></h3>
@@ -48,7 +48,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 						<div class="col_one_third nobottommargin">
 							<div class="feature-box media-box">
 								<div class="fbox-media">
-									<img src="/images/string/phi-logo.png" alt="PHI">
+									<img src="{{base}}/images/string/phi-logo.png" alt="PHI">
 								</div>
 								<div class="fbox-desc center">
 									<h3>PHI<span class="subtitle">Decentralized commercial banking and stable currency</span></h3>
@@ -65,7 +65,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 						<div class="col_one_third nobottommargin col_last">
 							<div class="feature-box media-box">
 								<div class="fbox-media">
-									<img src="/images/string/other-logo.png" alt="Other" style="opacity:0.7">
+									<img src="{{base}}/images/string/other-logo.png" alt="Other" style="opacity:0.7">
 								</div>
 								<div class="fbox-desc center">
 									<h3>Other<span class="subtitle">Joint ventures, fintech, mining...</span></h3>
@@ -100,7 +100,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
 								<div class="team team-list clearfix">
 									<div class="team-image">
-										<img src="/images/team/dom-head1.jpg" alt="Dominic Williams">
+										<img src="{{base}}/images/team/dom-head1.jpg" alt="Dominic Williams">
 									</div>
 									<div class="team-desc">
 										<div class="team-title"><h4>Dominic Williams</h4><span>President/CTO</span></div>
@@ -165,7 +165,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
 								<div class="team team-list clearfix">
 									<div class="team-image">
-										<img src="/images/team/timo-head1.jpg" alt="Timo Hanke">
+										<img src="{{base}}/images/team/timo-head1.jpg" alt="Timo Hanke">
 									</div>
 									<div class="team-desc">
 										<div class="team-title"><h4>Timo Hanke</h4><span>Chief Cryptographer</span></div>
@@ -229,7 +229,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
 								<div class="team team-list clearfix">
 									<div class="team-image">
-										<img src="/images/team/shigeo-head1.jpg" alt="Shigeo Mitsunari" style="opacity: 0.5">
+										<img src="{{base}}/images/team/shigeo-head1.jpg" alt="Shigeo Mitsunari" style="opacity: 0.5">
 									</div>
 									<div class="team-desc">
 										<div class="team-title"><h4>Shigeo Mitsunari</h4><span>Cryptography</span></div>
@@ -252,7 +252,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
 								<div class="team team-list clearfix">
 									<div class="team-image">
-										<img src="/images/team/jon-head1.jpg" alt="Jon Ball">
+										<img src="{{base}}/images/team/jon-head1.jpg" alt="Jon Ball">
 									</div>
 									<div class="team-desc">
 										<div class="team-title"><h4>Jon Ball</h4><span>Creative Lead</span></div>
@@ -281,7 +281,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
 								<div class="team team-list clearfix">
 									<div class="team-image">
-										<img src="/images/team/henry-head1.jpg" alt="Henry Yu">
+										<img src="{{base}}/images/team/henry-head1.jpg" alt="Henry Yu">
 									</div>
 									<div class="team-desc">
 										<div class="team-title"><h4>Henry Yu</h4><span>Asia Business Development</span></div>
@@ -304,7 +304,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
 								<div class="team team-list clearfix">
 									<div class="team-image">
-										<img src="/images/team/houman-head1.jpg" alt="Prof Houman Shadab">
+										<img src="{{base}}/images/team/houman-head1.jpg" alt="Prof Houman Shadab">
 									</div>
 									<div class="team-desc">
 										<div class="team-title"><h4>Prof Houman Shadab</h4><span>Legal Advisor</span></div>
@@ -335,7 +335,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
 								<div class="team team-list clearfix">
 									<div class="team-image">
-										<img src="/images/team/will-head1.jpg" alt="Prof Will Cong">
+										<img src="{{base}}/images/team/will-head1.jpg" alt="Prof Will Cong">
 									</div>
 									<div class="team-desc">
 										<div class="team-title"><h4>Prof Will Cong</h4><span>Economics Advisor</span></div>
