--- a/news.html
+++ b/news.html
@@ -1,10 +1,11 @@
 ---
 layout: default
-home-link: "/"
+home-link: ".."
 projects-link: "/#section-work"
 team-link: "/#section-team"
 investors-link: "/#section-investors"
 contact-link: "/#section-contact"
 hero: false
 ---
-{% include base.html %}
+
+{% include required-fragment-initialization-scripts.html %}
