Added Mandarin DFINITY deck. Changed deck titles. Photo update.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 									open chain governance using a "Blockchain Nervous System", private chains with smart contracts that can directly call into
 									contracts on the public chain and Third Generation crypto and protocols that create a 20X faster virtual machine and provide
 									a roadmap to infinite scalability.<br/>
-									<a href="https://drive.google.com/file/d/0Bzi2W8-eXcxaWHphOEVRdEJEN3M/view?usp=sharing">Summit (after Devcon2) DFINITY deck</a><br/>
+									<a href="https://drive.google.com/file/d/0Bzi2W8-eXcxaWHphOEVRdEJEN3M/view?usp=sharing">DFINITY deck (Summit following Devcon2)</a><br/>
+									<a href="https://drive.google.com/file/d/0Bzi2W8-eXcxaYVljVDZZdE1zV0U/view?usp=sharing">DFINITY deck in Mandarin</a><br/>
 									<a href="http://dfinity.network/">http://dfinity.network</a>
 									
 									</p>
@@ -60,7 +61,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 										bailouts at huge loss to society, and impeding socially impactful financial innovation. Imagine
 										then if commercial banks could be entirely replaced with autonomous smart contracts and open networks of
 										validators that give out loans algorithmically and create stable, fiat-like currency as a side effect.
-										<br/><a href="https://t.co/g3Tsiz6zOX">Devcon2 PHI deck</a></p>
+										<br/><a href="https://t.co/g3Tsiz6zOX">PHI deck (Devcon2)</a></p>
 								</div>
 							</div>
 						</div>
@@ -103,7 +104,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
 								<div class="team team-list clearfix">
 									<div class="team-image">
-										<img src="{{ base }}/images/team/dom-head1.jpg" alt="Dominic Williams">
+										<img src="{{ base }}/images/team/dom-head2.jpg" alt="Dominic Williams">
 									</div>
 									<div class="team-desc">
 										<div class="team-title"><h4>Dominic Williams</h4><span>President/CTO</span></div>
