--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 									contracts on the public chain and Third Generation crypto and protocols that create a 20X faster virtual machine and provide
 									a roadmap to infinite scalability.<br/>
 									<a href="https://drive.google.com/file/d/0Bzi2W8-eXcxaWHphOEVRdEJEN3M/view?usp=sharing">DFINITY deck (Summit following Devcon2)</a><br/>
-									<a href="https://drive.google.com/file/d/0Bzi2W8-eXcxaYVljVDZZdE1zV0U/view?usp=sharing">DFINITY deck in Mandarin</a><br/>
+									<a href="https://drive.google.com/file/d/0Bzi2W8-eXcxaYVljVDZZdE1zV0U/view?usp=sharing">DFINITY deck in Chinese</a><br/>
+									<a href="https://drive.google.com/file/d/0Bzi2W8-eXcxaMjdCMVlfQ2Rfcnc/view?usp=sharing">DFINITY deck in Japanese</a><br/>
 									<a href="http://dfinity.network/">http://dfinity.network</a>
-									
 									</p>
 								</div>
 							</div>
