--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 									open chain governance using a "Blockchain Nervous System", private chains with smart contracts that can directly call into
 									contracts on the public chain and Third Generation crypto and protocols that create a 20X faster virtual machine and provide
 									a roadmap to infinite scalability.<br/>
-									<a href="https://drive.google.com/file/d/0Bzi2W8-eXcxaWHphOEVRdEJEN3M/view?usp=sharing">DFINITY deck (Summit following Devcon2)</a><br/>
+									<a href="https://drive.google.com/file/d/0Bzi2W8-eXcxaWHphOEVRdEJEN3M/view?usp=sharing">DFINITY deck (Summit after Devcon2)</a><br/>
 									<a href="https://drive.google.com/file/d/0Bzi2W8-eXcxaYVljVDZZdE1zV0U/view?usp=sharing">DFINITY deck in Chinese</a><br/>
 									<a href="https://drive.google.com/file/d/0Bzi2W8-eXcxaMjdCMVlfQ2Rfcnc/view?usp=sharing">DFINITY deck in Japanese</a><br/>
 									<a href="http://dfinity.network/">http://dfinity.network</a>
