--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 										work with partners in industry either in joint venture or consultancy capacities. Furthermore, we aim to participate
 										commercially in the open ecosystems that we help found. For example, String Labs plans to be a major miner of the
 										Dfinity network, and also provide hosting of Dfinity private chains for corporate partners.</br>
-										<a href="#section-contact">Contact us</a> to chat.
+										<a href="#section-contact">Contact us</a> to chat.<br/>
+										<a href="https://legalese.com/">1st String grant recipient: Legalese</a>
 									</p>
 								</div>
 							</div>
