Corrected case Dfinity --> DFINITY

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 								</div>
 								<div class="fbox-desc center">
 									<h3>DFINITY<span class="subtitle">Infinite Trust Machine</span></h3>
-									<p>Dfinity is an open virtual blockchain computer and technology that extends and refocuses the Ethereum
+									<p>DFINITY is an open virtual blockchain computer and technology that extends and refocuses the Ethereum
 										ecosystem for business. Innovations include
 									open chain governance using a "Blockchain Nervous System", private chains with smart contracts that can directly call into
 									contracts on the public chain and Third Generation crypto and protocols that create a 20X faster virtual machine and provide
@@ -78,10 +78,10 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 								</div>
 								<div class="fbox-desc center">
 									<h3>Other<span class="subtitle">Joint ventures, fintech, mining...</span></h3>
-									<p>While Dfinity and PHI are our headline open protocol projects we have numerous projects in stealth at any one time and
+									<p>While DFINITY and PHI are our headline open protocol projects we have numerous projects in stealth at any one time and
 										work with partners in industry either in joint venture or consultancy capacities. Furthermore, we aim to participate
 										commercially in the open ecosystems that we help found. For example, String Labs plans to be a major miner of the
-										Dfinity network, and also provide hosting of Dfinity private chains for corporate partners.</br>
+										DFINITY network, and also provide hosting of DFINITY private chains for corporate partners.</br>
 										<a href="#section-contact">Contact us</a> to chat.<br/>
 										<a href="https://legalese.com/">1st String grant recipient: Legalese</a>
 									</p>
