--- a/index.html
+++ b/index.html
@@ -239,22 +239,23 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
 								<div class="team team-list clearfix">
 									<div class="team-image">
-										<img src="{{ base }}/images/team/shigeo-head1.jpg" alt="Shigeo Mitsunari" style="opacity: 0.5">
+										<img src="{{ base }}/images/team/tomomi-head1.jpg" alt="Tomomi Menjo">
 									</div>
 									<div class="team-desc">
-										<div class="team-title"><h4>Shigeo Mitsunari</h4><span>Cryptography</span></div>
+										<div class="team-title"><h4>Tomomi Menjo</h4><span>Project Coordinator</span></div>
 										<div class="team-content">
-											<p>Shigeo is a talented cryptographer with interests in pairing implementations, x86/x64 optimization
-												and machine learning, and the publisher of several academic works. He currently works with
-												Timo evolving a BLS threshold signature library that sits at the core of the Dfinity "threshold relay
-												chain" system. A C++ rockstar!</p>
+											<p>A highly dynamic coordinator of String projects and business development activity,
+												Tomomi was previously at the Women's Startup Lab in Menlo Park. She is a bilingual
+												Japanese speaker, recently graduating Cum Laude with a B.A. in Communication from 
+												Santa Clara University. She proves you don't have to be a crypto geek to help drive String!
+											</p>
 										</div>
-										<a href="https://github.com/herumi" class="social-icon si-rounded si-small si-github">
-											<i class="icon-github"></i>
-											<i class="icon-github"></i>
+										<a href="https://www.linkedin.com/in/tomomi-menjo" class="social-icon si-rounded si-small si-linkedin">
+											<i class="icon-linkedin"></i>
+											<i class="icon-linkedin"></i>
 										</a>
 									</div>
-								</div>
+								</div>								
 
 							</div>
 
@@ -270,7 +271,8 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 											<p>As an internationally renowned and influential designer, Jon has worked for many, many well known
 												names, contributing a unique and highly original sense of style and stunning visions in print, digital
 												and video. Jon also once worked with Dominic to create a "growth monster" MMO that reached 3M users.
-												A rockstar of design! </p>
+												A rockstar of design!
+											</p>
 										</div>
 										<a href="http://www.pokedstudio.com/" class="social-icon si-rounded si-small si-github">
 											<i class="icon-github"></i>
@@ -291,6 +293,29 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
 								<div class="team team-list clearfix">
 									<div class="team-image">
+										<img src="{{ base }}/images/team/shigeo-head1.jpg" alt="Shigeo Mitsunari" style="opacity: 0.5">
+									</div>
+									<div class="team-desc">
+										<div class="team-title"><h4>Shigeo Mitsunari</h4><span>Cryptography</span></div>
+										<div class="team-content">
+											<p>Shigeo is a talented cryptographer with interests in pairing implementations, x86/x64 optimization
+												and machine learning, and the publisher of several academic works. He currently works with
+												Timo evolving a BLS threshold signature library that sits at the core of the Dfinity "threshold relay
+												chain" system. A C++ rockstar!</p>
+										</div>
+										<a href="https://github.com/herumi" class="social-icon si-rounded si-small si-github">
+											<i class="icon-github"></i>
+											<i class="icon-github"></i>
+										</a>
+									</div>
+								</div>
+
+							</div>							
+
+							<div class="col-md-6 bottommargin">
+
+								<div class="team team-list clearfix">
+									<div class="team-image">
 										<img src="{{ base }}/images/team/henry-head1.jpg" alt="Henry Yu">
 									</div>
 									<div class="team-desc">
@@ -302,33 +327,6 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 												Henry shares an alma mater with Dominic.</p>
 										</div>
 										<a href="https://hk.linkedin.com/in/henry-yu-6362b261" class="social-icon si-rounded si-small si-linkedin">
-											<i class="icon-linkedin"></i>
-											<i class="icon-linkedin"></i>
-										</a>
-									</div>
-								</div>
-
-							</div>
-
-							<div class="col-md-6 bottommargin">
-
-								<div class="team team-list clearfix">
-									<div class="team-image">
-										<img src="{{ base }}/images/team/houman-head1.jpg" alt="Prof Houman Shadab">
-									</div>
-									<div class="team-desc">
-										<div class="team-title"><h4>Prof Houman Shadab</h4><span>Legal Advisor</span></div>
-										<div class="team-content">
-											<p>Currently a Professor of Law at New York Law School, Houman is a world renowned expert on 
-												law relating to cutting-edge fintech, hedge funds and securitization. This has led him to 
-												testify to congress on hedge funds and the financial crisis, and to the CFTC on Bitcoin
-											    derivatives.</p>
-										</div>
-										<a href="https://twitter.com/HoumanShadab" class="social-icon si-rounded si-small si-twitter">
-											<i class="icon-twitter"></i>
-											<i class="icon-twitter"></i>
-										</a>
-										<a href="https://www.linkedin.com/in/houmanshadab" class="social-icon si-rounded si-small si-linkedin">
 											<i class="icon-linkedin"></i>
 											<i class="icon-linkedin"></i>
 										</a>
@@ -363,6 +361,33 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 								</div>
 
 							</div>
+
+							<div class="col-md-6 bottommargin">
+
+								<div class="team team-list clearfix">
+									<div class="team-image">
+										<img src="{{ base }}/images/team/houman-head1.jpg" alt="Prof Houman Shadab">
+									</div>
+									<div class="team-desc">
+										<div class="team-title"><h4>Prof Houman Shadab</h4><span>Legal Advisor</span></div>
+										<div class="team-content">
+											<p>Currently a Professor of Law at New York Law School, Houman is a world renowned expert on 
+												law relating to cutting-edge fintech, hedge funds and securitization. This has led him to 
+												testify to congress on hedge funds and the financial crisis, and to the CFTC on Bitcoin
+											    derivatives.</p>
+										</div>
+										<a href="https://twitter.com/HoumanShadab" class="social-icon si-rounded si-small si-twitter">
+											<i class="icon-twitter"></i>
+											<i class="icon-twitter"></i>
+										</a>
+										<a href="https://www.linkedin.com/in/houmanshadab" class="social-icon si-rounded si-small si-linkedin">
+											<i class="icon-linkedin"></i>
+											<i class="icon-linkedin"></i>
+										</a>
+									</div>
+								</div>
+
+							</div>							
 
 						</div>
 	
