Added working pagination

--- a/index.html
+++ b/index.html
@@ -115,10 +115,9 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 									<div class="team-desc">
 										<div class="team-title"><h4>Dominic Williams</h4><span>President/CTO</span></div>
 										<div class="team-content">
-											<p>Decentralization geek and serial technology entrepreneur who hails from the UK. Dominic's
+											<p>Protocol geek, coder and serial technology entrepreneur who hails from the UK. Dominic's
 											   last venture was an MMO that grew to 3M users and allowed him to indulge his passion for scalable tech.
-											   Dominic is a bit of a hippy, but once won prizes in Computer Science at London University. Designs
-											   protocols for fun.
+											   Dominic is a bit of a hippy, but once won prizes in Computer Science at London University. 
 											</p>
 										</div>
 										<a href="https://twitter.com/dominic_w" class="social-icon si-rounded si-small si-twitter">
