--- a/cn/index.html
+++ b/cn/index.html
@@ -552,7 +552,7 @@ DFINITY发布会幻灯片(全球区块链峰会)
                                     <form class="nobottommargin" id="template-contactform" name="template-contactform" action="#" onsubmit="email()" method="post" enctype="text/plain">
 
                                         <div class="col_full">
-                                            <label for="template-contactform-name">名字 <small>*</small></label>
+                                            <label for="template-contactform-name">姓名 <small>*</small></label>
                                             <input type="text" id="template-contactform-name" name="template-contactform-name" value="" class="sm-form-control required" />
                                         </div>
 
