--- a/cn/index.html
+++ b/cn/index.html
@@ -99,18 +99,18 @@
                                <a href="#"><div class="subtitle" style="color:#75DB3C;">
 
 
-中文
-
+ English
 
                                </div></a>
                                <ul>
                                  <li class="sub-menu-content">
-                                        <a href="/">EN</a>
+                                        <a href="/"> English</a>
                                     
                                  </li>
                                                                   <li class="sub-menu-content">
 
-                                     <a href="/cn">中文</a>
+                                     <a href="/cn"> 中文
+</a>
                                      </li>
                                            
                             </li>
@@ -552,7 +552,7 @@ DFINITY发布会幻灯片(全球区块链峰会)
                                     <form class="nobottommargin" id="template-contactform" name="template-contactform" action="#" onsubmit="email()" method="post" enctype="text/plain">
 
                                         <div class="col_full">
-                                            <label for="template-contactform-name">姓名 <small>*</small></label>
+                                            <label for="template-contactform-name">名字 <small>*</small></label>
                                             <input type="text" id="template-contactform-name" name="template-contactform-name" value="" class="sm-form-control required" />
                                         </div>
 
