added dfinity brief tour talk

--- a/index.html
+++ b/index.html
@@ -154,6 +154,23 @@ text-align:center;
 						 <h3>{% t index.dfinity-watch-video %}</h3>
 						 </p>
 						 <div>
+                              <div class="col_one_fourth ">
+								<div style="display:inline" class="feature-box media-box">
+							 		<a target="_blank"  href="#briefTourModal" data-lightbox="inline">
+									<img src="https://img.youtube.com/vi/DP8X-NuG4z0/hqdefault.jpg">
+
+							 		<!-- <iframe width="180" height="100" src="https://www.youtube.com/embed/xf1dql4Zoqw" frameborder="0" allowfullscreen></iframe> -->
+									<p style="text-align:center;">
+							 			<a href="#briefTourModal" data-lightbox="inline">
+							 		{% t index.dfinity-brief-tour-video %}
+
+							 		</a></p>
+							 		</a>
+							 											
+							 	</div>
+						 	</div>
+
+
 						 	<div class="col_one_fourth ">
 								<div style="display:inline" class="feature-box media-box">
 							 		<a target="_blank"  href="#randomBeaconModal" data-lightbox="inline">
@@ -186,6 +203,20 @@ text-align:center;
 								</div>
 
 							</div>
+
+		        <div class="modal1 mfp-hide" id="briefTourModal">
+							<div class="block divcenter" style="background-color: #282828;max-width:80%;max-height:80%;">
+								<div class="center clearfix" >
+									<div class="fluid-width-video-wrapper" style="padding-top: 42%;">
+										<iframe src="https://www.youtube.com/embed/DP8X-NuG4z0" frameborder="0" allowfullscreen></iframe>
+
+										</div>
+									
+								</div>
+							</div>
+						</div>
+
+
 						<div class="modal1 mfp-hide" id="randomBeaconModal">
 							<div class="block divcenter" style="background-color: #282828;max-width:80%;max-height:80%;">
 								<div class="center clearfix" >
