--- a/ja/mkt-assets/signature/sig.html
+++ b/ja/mkt-assets/signature/sig.html
@@ -79,23 +79,23 @@ body {
 
 
 <div id="logo-wrapper">
-<img src="http://string.technology/_assets/signature/imgs/string.png" id="string-logo"><br>
+<img src="http://string.technology/mkt-assets/signature/imgs/string.png" id="string-logo"><br>
  
   </span>
 </div>
 <div id="profile-wrapper">
   <span id="headline">Tom Ding</span>&nbsp; 
   <span id="email">
-  <a href="http://linkedin.com/in/tomding"><img class="social-icon" src="http://string.technology/_assets/signature/imgs/linkedin.png"></a>
+  <a href="http://linkedin.com/in/tomding"><img class="social-icon" src="http://string.technology/mkt-assets/signature/imgs/linkedin.png"></a>
 
-  <a href="http://twitter.com/tom_ding"><img class="social-icon" src="http://string.technology/_assets/signature/imgs/twitter.png"></a>
+  <a href="http://twitter.com/tom_ding"><img class="social-icon" src="http://string.technology/mkt-assets/signature/imgs/twitter.png"></a>
   
   <br>
 
   <!-- <span id="sub-headline"><span id="email-title">Email:</span> tom@string.technology  </span> -->
       <span id="sub-headline">CEO, String Labs</span>
 <br>
-   <img  src="imgs/arrow.png" width='9px' height='9px'>
+   <img  src="http://string.technology/mkt-assets/signature/imgs/arrow.png" width='9px' height='9px'>
    <a href="http://string.technology/#projects" ><span id="protocol-projects"> 
 Open Protocol Projects</span></a>
 
