Add name, photo, and bio for Enzo and remove Gustav and Henry

--- a/index.html
+++ b/index.html
@@ -195,44 +195,11 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 										<a href="https://github.com/bcpki" class="social-icon si-rounded si-small si-github">
 											<i class="icon-github"></i>
 											<i class="icon-github"></i>
-										</a>										
-									</div>
-								</div>
-
-							</div>
-
-							<div class="col-md-6 bottommargin">
-
-								<div class="team team-list clearfix">
-									<div class="team-image">
-										<img src="{{ base }}/images/team/gustav-head1.jpg" alt="Gustav Simonsson">
-									</div>
-									<div class="team-desc">
-										<div class="team-title"><h4>Gustav Simonsson</h4><span>Principal Engineer</span></div>
-										<div class="team-content">
-											<p>Cutting his teeth with distributed systems coding at Ericsson R&amp;D in Stockholm, Gustav 
-												moved to SumUp, a famous European payments startup in Berlin. After realizing traditional
-												payments systems were broken, he turned to Bitcoin. Later, he became an Ethereum core dev
-												on the Go team specializing in security.</p>
-										</div>
-										<a href="https://twitter.com/classygustav" class="social-icon si-rounded si-small si-twitter">
-											<i class="icon-twitter"></i>
-											<i class="icon-twitter"></i>
-										</a>
-										<a href="https://github.com/Gustav-Simonsson" class="social-icon si-rounded si-small si-github">
-											<i class="icon-github"></i>
-											<i class="icon-github"></i>
 										</a>
 									</div>
 								</div>
 
 							</div>
-
-						</div>
-
-						<div class="clear"></div>
-
-						<div class="row">
 
 							<div class="col-md-6 bottommargin">
 
@@ -254,9 +221,15 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 											<i class="icon-linkedin"></i>
 										</a>
 									</div>
-								</div>								
+								</div>
 
 							</div>
+
+						</div>
+
+						<div class="clear"></div>
+
+						<div class="row">
 
 							<div class="col-md-6 bottommargin">
 
@@ -280,13 +253,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 									</div>
 								</div>
 
-							</div>							
-
-						</div>		
-
-						<div class="clear"></div>
-
-						<div class="row">
+							</div>
 
 							<div class="col-md-6 bottommargin">
 
@@ -309,30 +276,9 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 									</div>
 								</div>
 
-							</div>							
-
-							<div class="col-md-6 bottommargin">
-
-								<div class="team team-list clearfix">
-									<div class="team-image">
-										<img src="{{ base }}/images/team/henry-head1.jpg" alt="Henry Yu">
-									</div>
-									<div class="team-desc">
-										<div class="team-title"><h4>Henry Yu</h4><span>Asia Business Development</span></div>
-										<div class="team-content">
-											<p>A founding partner at a successful Hong Kong law firm (specializing in corporate finance and
-												capital markets), Henry was previously Executive Director of compliance at ICBC. His interest 
-												in crypto made him an early team member and a go-to String mover and shaker in Asia.
-												Henry shares an alma mater with Dominic.</p>
-										</div>
-										<a href="https://hk.linkedin.com/in/henry-yu-6362b261" class="social-icon si-rounded si-small si-linkedin">
-											<i class="icon-linkedin"></i>
-											<i class="icon-linkedin"></i>
-										</a>
-									</div>
-								</div>
-
 							</div>
+
+						</div>
 
 						<div class="clear"></div>
 
@@ -386,12 +332,38 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 									</div>
 								</div>
 
-							</div>							
+							</div>
 
 						</div>
-	
+
+						<div class="clear"></div>
+
+						<div class="row">
+
+							<div class="col-md-6 bottommargin">
+
+								<div class="team team-list clearfix">
+									<div class="team-image">
+										<img src="{{ base }}/images/team/enzo-head1.jpg" alt="Enzo Haussecker">
+									</div>
+									<div class="team-desc">
+										<div class="team-title"><h4>Enzo Haussecker</h4><span>Senior Software Engineer</span></div>
+										<div class="team-content">
+											<p>Enzo has built and maintained high-throughput computing infrastructure for several high-growth startups in Silicon Valley. He is passionate about cloud computing, automation, and loves to share his knowledge and enthusiasm with others. Enzo holds a Bachelor of Science degree in Applied Mathematics from the University of California at San Diego.</p>
+										</div>
+										<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
+											<i class="icon-linkedin"></i>
+											<i class="icon-linkedin"></i>
+										</a>
+									</div>
+								</div>
+
+							</div>
+
+						</div>
 
 					</div>
+
 				</section>
 
 				<section id="section-investors" class="page-section section nomargin dark"  style="background-color: #222; padding-bottom: 100px;">
