--- a/cn/index.html
+++ b/cn/index.html
@@ -464,14 +464,15 @@
     </div>
 
 </section>
+
 <section id="section-team" class="page-section section nomargin dark" style="background-color: #222;">
 
-    <div class="heading-block center">
-        <h2>团队</h2>
-        <span>热爱前沿的密码学和分布式技术吗？加入String推动区块链科学发展吧！</span>
-    </div>
+	<div class="heading-block center">
+		<h2>团队</h2>
+		<span>热爱前沿的密码学和分布式技术吗？加入String推动区块链科学发展吧！</span>
+	</div>
 
-    <div class="container clearfix">
+	<div class="container clearfix">
 
 		<div class="row">
 
@@ -484,10 +485,7 @@
 					<div class="team-desc">
 						<div class="team-title"><h4>Dominic Williams</h4><span>President/CTO</span></div>
 						<div class="team-content">
-							<p>Protocol geek, coder and serial technology entrepreneur who hails from the UK. Dominic's
-							   last venture was an MMO that grew to 3M users and allowed him to indulge his passion for scalable tech.
-							   Dominic is a bit of a hippy, but once won prizes in Computer Science at London University. 
-							</p>
+							<p>Protocol geek, coder and serial technology entrepreneur who hails from the UK. Dominic's last venture was an MMO that grew to 3M users and allowed him to indulge his passion for scalable tech. Dominic is a bit of a hippy, but once won prizes in Computer Science at London University.</p>
 						</div>
 						<a href="https://twitter.com/dominic_w" class="social-icon si-rounded si-small si-twitter">
 							<i class="icon-twitter"></i>
@@ -515,10 +513,7 @@
 					<div class="team-desc">
 						<div class="team-title"><h4>Tom Ding</h4><span>CEO</span></div>
 						<div class="team-content">
-							<p>Serial entrepreneur, founder of Blockchain University and previously a senior manager at eBay who
-								comes from Shanghai. Tom caught the blockchain wave in 2013 and hasn't looked back. Back in the day, he 
-								graduated in Computer Science at age 14 and from business school at 20.
-							    Tom's a regular startup and crypto pundit.</p>
+							<p>Serial entrepreneur, founder of Blockchain University and previously a senior manager at eBay who comes from Shanghai. Tom caught the blockchain wave in 2013 and hasn't looked back. Back in the day, he graduated in Computer Science at age 14 and from business school at 20. Tom's a regular startup and crypto pundit.</p>
 						</div>
 						<a href="https://twitter.com/tom_ding" class="social-icon si-rounded si-small si-twitter">
 							<i class="icon-twitter"></i>
@@ -548,10 +543,7 @@
 					<div class="team-desc">
 						<div class="team-title"><h4>Timo Hanke</h4><span>Chief Cryptographer</span></div>
 						<div class="team-content">
-							<p>Once an Aachen University mathematics and cryptography professor in Germany, Timo caught the 
-								decentralization bug. Timo has worked on numerous crypto products and prior to joining
-								String Labs invented and patented the famous AsicBoost (http://asicboost.com/). At String he
-							    works on Third Generation crypto systems.</p>
+							<p>Once an Aachen University mathematics and cryptography professor in Germany, Timo caught the decentralization bug. Timo has worked on numerous crypto products and prior to joining String Labs invented and patented the famous AsicBoost (http://asicboost.com/). At String he works on Third Generation crypto systems.</p>
 						</div>
 						<a href="https://twitter.com/timothanke" class="social-icon si-rounded si-small si-twitter">
 							<i class="icon-twitter"></i>
@@ -574,16 +566,38 @@
 
 				<div class="team team-list clearfix">
 					<div class="team-image">
+						<img src="./images/team/enzo-head1.jpg" alt="Enzo Haussecker">
+					</div>
+					<div class="team-desc">
+						<div class="team-title"><h4>Enzo Haussecker</h4><span>Senior Software Engineer</span></div>
+						<div class="team-content">
+							<p>Enzo has built and maintained high-throughput computing infrastructure for several high-growth startups in Silicon Valley. He is passionate about cloud computing, automation, and loves to share his knowledge and enthusiasm with others. Enzo holds a Bachelor of Science degree in Applied Mathematics from the University of California at San Diego.</p>
+						</div>
+						<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
+							<i class="icon-linkedin"></i>
+							<i class="icon-linkedin"></i>
+						</a>
+					</div>
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="clear"></div>
+
+		<div class="row">
+
+			<div class="col-md-6 bottommargin">
+
+				<div class="team team-list clearfix">
+					<div class="team-image">
 						<img src="./images/team/tomomi-head1.jpg" alt="Tomomi Menjo">
 					</div>
 					<div class="team-desc">
 						<div class="team-title"><h4>Tomomi Menjo</h4><span>Project Coordinator</span></div>
 						<div class="team-content">
-							<p>A highly dynamic coordinator of String projects and business development activity,
-								Tomomi was previously at the Women's Startup Lab in Menlo Park. She is a bilingual
-								Japanese speaker, recently graduating Cum Laude with a B.A. in Communication from 
-								Santa Clara University. She proves you don't have to be a crypto geek to help drive String!
-							</p>
+							<p>A highly dynamic coordinator of String projects and business development activity, Tomomi was previously at the Women's Startup Lab in Menlo Park. She is a bilingual Japanese speaker, recently graduating Cum Laude with a B.A. in Communication from Santa Clara University. She proves you don't have to be a crypto geek to help drive String!</p>
 						</div>
 						<a href="https://www.linkedin.com/in/tomomi-menjo" class="social-icon si-rounded si-small si-linkedin">
 							<i class="icon-linkedin"></i>
@@ -594,12 +608,6 @@
 
 			</div>
 
-		</div>
-
-		<div class="clear"></div>
-
-		<div class="row">
-
 			<div class="col-md-6 bottommargin">
 
 				<div class="team team-list clearfix">
@@ -609,11 +617,7 @@
 					<div class="team-desc">
 						<div class="team-title"><h4>Jon Ball</h4><span>Creative Lead</span></div>
 						<div class="team-content">
-							<p>As an internationally renowned and influential designer, Jon has worked for many, many well known
-								names, contributing a unique and highly original sense of style and stunning visions in print, digital
-								and video. Jon also once worked with Dominic to create a "growth monster" MMO that reached 3M users.
-								A rockstar of design!
-							</p>
+							<p>As an internationally renowned and influential designer, Jon has worked for many, many well known names, contributing a unique and highly original sense of style and stunning visions in print, digital and video. Jon also once worked with Dominic to create a "growth monster" MMO that reached 3M users. A rockstar of design!</p>
 						</div>
 						<a href="http://www.pokedstudio.com/" class="social-icon si-rounded si-small si-github">
 							<i class="icon-github"></i>
@@ -624,6 +628,12 @@
 
 			</div>
 
+		</div>
+
+		<div class="clear"></div>
+
+		<div class="row">
+
 			<div class="col-md-6 bottommargin">
 
 				<div class="team team-list clearfix">
@@ -633,10 +643,7 @@
 					<div class="team-desc">
 						<div class="team-title"><h4>Shigeo Mitsunari</h4><span>Cryptography</span></div>
 						<div class="team-content">
-							<p>Shigeo is a talented cryptographer with interests in pairing implementations, x86/x64 optimization
-								and machine learning, and the publisher of several academic works. He currently works with
-								Timo evolving a BLS threshold signature library that sits at the core of the Dfinity "threshold relay
-								chain" system. A C++ rockstar!</p>
+							<p>Shigeo is a talented cryptographer with interests in pairing implementations, x86/x64 optimization and machine learning, and the publisher of several academic works. He currently works with Timo evolving a BLS threshold signature library that sits at the core of the Dfinity "threshold relay chain" system. A C++ rockstar!</p>
 						</div>
 						<a href="https://github.com/herumi" class="social-icon si-rounded si-small si-github">
 							<i class="icon-github"></i>
@@ -647,12 +654,6 @@
 
 			</div>
 
-		</div>
-
-		<div class="clear"></div>
-
-		<div class="row">
-
 			<div class="col-md-6 bottommargin">
 
 				<div class="team team-list clearfix">
@@ -662,10 +663,7 @@
 					<div class="team-desc">
 						<div class="team-title"><h4>Prof Will Cong</h4><span>Economics Advisor</span></div>
 						<div class="team-content">
-							<p>Assistant Professor of Finance at Chicago Booth, Will Cong holds positions such as George Shultz
-								Scholar at the Stanford Institute for Economic Policy Research and prizes from the
-								Shmuel Kandel Award in Financial Economics to gold medals in international and
-								national Math contests: a bona fide financial economics maestro!</p>
+							<p>Assistant Professor of Finance at Chicago Booth, Will Cong holds positions such as George Shultz Scholar at the Stanford Institute for Economic Policy Research and prizes from the Shmuel Kandel Award in Financial Economics to gold medals in international and national Math contests: a bona fide financial economics maestro!</p>
 						</div>
 						<a href="https://www.linkedin.com/in/linwilliamcong" class="social-icon si-rounded si-small si-linkedin">
 							<i class="icon-linkedin"></i>
@@ -676,33 +674,6 @@
 
 			</div>
 
-			<div class="col-md-6 bottommargin">
-
-				<div class="team team-list clearfix">
-					<div class="team-image">
-						<img src="./images/team/houman-head1.jpg" alt="Prof Houman Shadab">
-					</div>
-					<div class="team-desc">
-						<div class="team-title"><h4>Prof Houman Shadab</h4><span>Legal Advisor</span></div>
-						<div class="team-content">
-							<p>Currently a Professor of Law at New York Law School, Houman is a world renowned expert on 
-								law relating to cutting-edge fintech, hedge funds and securitization. This has led him to 
-								testify to congress on hedge funds and the financial crisis, and to the CFTC on Bitcoin
-							    derivatives.</p>
-						</div>
-						<a href="https://twitter.com/HoumanShadab" class="social-icon si-rounded si-small si-twitter">
-							<i class="icon-twitter"></i>
-							<i class="icon-twitter"></i>
-						</a>
-						<a href="https://www.linkedin.com/in/houmanshadab" class="social-icon si-rounded si-small si-linkedin">
-							<i class="icon-linkedin"></i>
-							<i class="icon-linkedin"></i>
-						</a>
-					</div>
-				</div>
-
-			</div>
-
 		</div>
 
 		<div class="clear"></div>
@@ -713,14 +684,18 @@
 
 				<div class="team team-list clearfix">
 					<div class="team-image">
-						<img src="./images/team/enzo-head1.jpg" alt="Enzo Haussecker">
+						<img src="./images/team/houman-head1.jpg" alt="Prof Houman Shadab">
 					</div>
 					<div class="team-desc">
-						<div class="team-title"><h4>Enzo Haussecker</h4><span>Senior Software Engineer</span></div>
+						<div class="team-title"><h4>Prof Houman Shadab</h4><span>Legal Advisor</span></div>
 						<div class="team-content">
-							<p>Enzo has built and maintained high-throughput computing infrastructure for several high-growth startups in Silicon Valley. He is passionate about cloud computing, automation, and loves to share his knowledge and enthusiasm with others. Enzo holds a Bachelor of Science degree in Applied Mathematics from the University of California at San Diego.</p>
+							<p>Currently a Professor of Law at New York Law School, Houman is a world renowned expert on law relating to cutting-edge fintech, hedge funds and securitization. This has led him to testify to congress on hedge funds and the financial crisis, and to the CFTC on Bitcoin derivatives.</p>
 						</div>
-						<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
+						<a href="https://twitter.com/HoumanShadab" class="social-icon si-rounded si-small si-twitter">
+							<i class="icon-twitter"></i>
+							<i class="icon-twitter"></i>
+						</a>
+						<a href="https://www.linkedin.com/in/houmanshadab" class="social-icon si-rounded si-small si-linkedin">
 							<i class="icon-linkedin"></i>
 							<i class="icon-linkedin"></i>
 						</a>
