update fonts, includes, new slide layout partials

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 ============================================= -->
 <section id="content">
     <div class="content-wrap nopadding">
-        <section id="section-work" class="page-section section nomargin dark" style="background-color: #222;">
+        <section id="section-work" class="page-section section nomargin dark bg-stringlabs">
             <a name="projects"></a>
             <div class="container clearfix">
                 <div class="heading-block center">
@@ -113,7 +113,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                 <div class="clear"></div>
             </div>
         </section>
-        <section id="section-dfinity" class="page-section section nomargin ">
+        <section id="section-dfinity" class="page-section section nomargin bg-stringlabs">
             <a name="dfinity"></a>
             <div class="container clearfix">
                 <div class="heading-block center">
@@ -240,10 +240,10 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
         </section>
     </div>
 </section>
-<section id="section-research" class="page-section section nomargin dark" style="background-color: #222;">
+<section id="section-research" class="page-section section nomargin dark bg-stringlabs">
     [research section]
 </section>
-<section id="section-team" class="page-section section nomargin dark" style="background-color: #222;">
+<section id="section-team" class="page-section section nomargin dark bg-stringlabs-dark">
 	<div class="heading-block center">
 		<h2>{% t index.team-title %}</h2>
 		<span>{% t index.team-subtitle %}</span>
