theme overrides, layout, typography styles

--- a/index.html
+++ b/index.html
@@ -52,30 +52,30 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
             <div class="container clearfix">
                 <div class="heading-block center">
                     <h2>{% t index.projects-title %}</h2>
-                    <span>{% t index.projects-subtitle %}</span>
                 </div>
                 <div class="col_one_third nobottommargin">
                     <div class="feature-box media-box">
                         <div class="fbox-media">
                             <img src="{{ base }}/images/string/dfinity-logo.png" alt="DFINITY">
-                            {% t index.projects-dfinity-subtitle %}
                         </div>
                         <div class="fbox-desc center">
-                            <h3>DFINITY<span class="subtitle">{% t index.projects-learn-more %}</span></h3>
+                            <h3>DFINITY</h3>
+                            <h4>{% t index.projects-dfinity-subtitle %}</h4>
                             <p>{% t index.projects-dfinity-intro %}<br/>
                                 <a href="http://dfinity.network/">http://dfinity.network</a>
                             </p>
                         </div>
+                        <div class="subtitle link">{% t index.projects-learn-more %}</div>
                     </div>
                 </div>
                 <div class="col_one_third nobottommargin">
                     <div class="feature-box media-box">
                         <div class="fbox-media">
                             <img src="{{ base }}/images/string/phi-logo.png" alt="PHI">
-                            {% t index.projects-phi-subtitle %}
                         </div>
                         <div class="fbox-desc center">
-                            <h3>PHI<span class="subtitle">{% t index.projects-learn-more %}</span></h3>
+                            <h3>PHI</h3>
+                            <h4>{% t index.projects-phi-subtitle %}</h4>
                             <p>{% t index.projects-phi-intro %}<br/>
                                 <!--
                                     <a target="_blank" href="https://speakerdeck.com/stringlabs/phi-decentralized-commercial-banking-at-ethereum-devcon-2">
@@ -91,23 +91,24 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                                     {% t index.projects-phi-video %}</a>
                             </p>
                         </div>
+                        <div class="subtitle link">{% t index.projects-learn-more %}</div>
                     </div>
                 </div>
                 <div class="col_one_third nobottommargin col_last">
                     <div class="feature-box media-box">
                         <div class="fbox-media">
                             <img src="{{ base }}/images/string/other-logo.png" alt="Other" style="opacity:0.7">
-                            {% t index.projects-other-subtitle %}
                         </div>
                         <div class="fbox-desc center">
-                            <h3>{% t index.projects-other-title %}<span class="subtitle">{% t index.projects-learn-more %}</span>
-                            </h3>
+                            <h3>{% t index.projects-other-title %}</h3>
+                            <h4>{% t index.projects-other-subtitle %}</h4>
                             <p>{% t index.projects-other-intro %}</br/>
                                 <a href="#section-contact">{% t index.projects-other-contact %}</a><br/>
                                 <a target="_blank" href="https://legalese.com/">{% t index.projects-other-grant-legalese
                                     %}</a>
                             </p>
                         </div>
+                        <div class="subtitle link">{% t index.projects-learn-more %}</div>
                     </div>
                 </div>
                 <div class="clear"></div>
@@ -119,9 +120,6 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                 <div class="heading-block center">
                     <!-- <img src="{{ base }}/images/string/dfinity-logo.png" width="50px" height="50px" alt="DFINITY"> -->
                     <h2>{% t index.dfinity-title %}</h2>
-                    <span>
-					    {% t index.dfinity-subtitle %}
-					</span>
                 </div>
                 <div id="deck-container" class="fbox-media">
                     <div>
