--- a/index.html
+++ b/index.html
@@ -114,7 +114,13 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                 <div class="clear"></div>
             </div>
         </section>
-        <section id="section-dfinity" class="page-section section nomargin bg-stringlabs">
+        <section id="section-research" class="page-section section nomargin dark bg-stringlabs-dark full-height">
+            [research section]
+        </section>
+        <section id="section-research-2" class="page-section section nomargin dark bg-stringlabs-dark full-height">
+            [research section 2]
+        </section>
+        <section id="section-dfinity" class="page-section section nomargin bg-stringlabs-dark full-height">
             <a name="dfinity"></a>
             <div class="container clearfix">
                 <div class="heading-block center">
@@ -238,13 +244,10 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
         </section>
     </div>
 </section>
-<section id="section-research" class="page-section section nomargin dark bg-stringlabs">
-    [research section]
-</section>
 <section id="section-team" class="page-section section nomargin dark bg-stringlabs-dark">
 	<div class="heading-block center">
 		<h2>{% t index.team-title %}</h2>
-		<span>{% t index.team-subtitle %}</span>
+		<div>{% t index.team-subtitle %}</div>
 	</div>
 	<div class="container clearfix">
 		<div class="row">
@@ -440,12 +443,6 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 		</div>
 	</div>
 </section>
-<section id="section-investment" class="page-section section nomargin dark" style="background-color: #222;">
-    [investment philosophy section]
-</section>
-<section id="section-blog" class="page-section section nomargin dark" style="background-color: #222;">
-    [blog section]
-</section>
 <script>
 
     function dfinityDeckLang(lang) {
@@ -459,8 +456,20 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
         // Workdaround: Force redraw the deck widget by firing a resize event
         window.dispatchEvent(new Event('resize'));
-
-
     }
+
+    function themeOverrides(event) {
+      $('#slider .swiper-slide').attr('style', $('#slider .swiper-slide').attr('style').replace(/^(.*?);/gi, ''));
+    }
+
+    function DOMContentDidLoad(event) {
+        setTimeout(function() {
+            return timeoutIndex++ > 20 ? false : $('#slider .swiper-slide').attr('test') ? themeOverrides() : DOMContentDidLoad();
+        }, 500);
+    }
+
+    var timeoutIndex = 0;
+
+    document.addEventListener('DOMContentLoaded', DOMContentDidLoad);
 </script>
 <!-- #content end -->
