replace test attr

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
     function DOMContentDidLoad(event) {
         setTimeout(function() {
-            return timeoutIndex++ > 20 ? false : $('#slider .swiper-slide').attr('test') ? themeOverrides() : DOMContentDidLoad();
+            return timeoutIndex++ > 20 ? false : $('#slider .swiper-slide').attr('style') ? themeOverrides() : DOMContentDidLoad();
         }, 500);
     }
 
